# pydra

./: pyproject.toml
pydra_tests/: test_config_model.py  test_file_handlers.py  test_super_union_model.py
scripts/: lint
src/pydra/: config_model.py  file_handlers.py  super_union_model.py
