[project]
name = "pydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "allavinner", email = "joel.w.ottosson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
